@@ -21,9 +21,10 @@ support() {
 	$ECHO "@SUPPORT@" | sed -e 's/\n/ /g'
 }
 
-
+#
 # check_range takes a value and a range string, returning successfully if an
-# alert should be raised based on the range
+# alert should be raised based on the range.
+#
 check_range() {
 	local v range yes no err decimal start end cmp match
 	v="$1"
@@ -105,4 +106,3 @@ check_range() {
 		return "$no"
 	fi
 }
-
